--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="add-element popup" title="Add Element" onclick="myFunction()">+
 			<span class="popuptext" id="myPopup">
 				<div class="form-field">
-					<h5><span class="left">Form Fields</span><span class="right">x</span></h5>
+					<h5><span class="left">Form Fields</span><span class="right" title="Hide">x</span></h5>
 					<button onclick="nameFunction()">Start</button>
 					<button id="two-element" onclick="elementFunction(), disabledElement()">Conformation</button>
 				</div>
