--- a/demo.html
+++ b/demo.html
@@ -50,6 +50,14 @@
 			.desc h2 { font-size: 1em; }
 			.desc p { font-size: 10px; }
 		}
+		@media screen and (max-width: 375px) {
+			.desc { bottom: 212px; }
+			ul li {
+				margin: 0px;
+				padding: 10px 0px;
+				border-bottom: 1px solid #5d5d5d;
+			}
+		}
     
 	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
