--- a/demo.html
+++ b/demo.html
@@ -30,7 +30,7 @@
 		.right {float: right; color: #ffb64a; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
 		
 		@media screen and (max-width: 2560px) {
-			.desc { bottom: 260px; }
+			.desc { bottom: 256px; }
 		}
 		@media screen and (max-width: 1580px) {
 			.right {max-width: 220px;}
@@ -53,10 +53,16 @@
 		@media screen and (max-width: 375px) {
 			.desc { bottom: 212px; }
 			ul li {
-				margin: 0px;
+				margin: 5px;
 				padding: 10px 0px;
 				border-bottom: 1px solid #5d5d5d;
+				font-size: 10px;
 			}
+		}
+		@media screen and (max-width: 375px) {
+			.c-box { width: 100%; }
+			.desc { width: 100%; }
+			.right { max-width: 172px; }
 		}
     
 	</style>
