--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>css | Grid</title>
+		<title>demo</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<style>
 			*{
