--- a/sapient.html
+++ b/sapient.html
@@ -49,7 +49,8 @@
 			tr { text-align: left; border-bottom: 1px solid #5d5d5d; }
 			td { margin: 5px; padding: 10px 4px; }
 			
-			tr:nth-child(5) { border-bottom: none; }
+			tr:last-child { border-bottom: none; }
+			/*tr:nth-child(5) { border-bottom: none; }*/
 			
 			.right { float: right; color: #ffb64a; text-align: right; }
 			
